// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenRequest: actions close modal 1`] = `
Object {
  "type": "CLOSE_TOKEN_MODAL",
}
`;

exports[`TokenRequest: actions open modal 1`] = `
Object {
  "type": "OPEN_TOKEN_MODAL",
}
`;
